chore: Fix sonar issues